--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url(drum.jpg) bottom center;
   background-size: cover;
 }
 
@@ -14,17 +14,18 @@ body,html {
   display: flex;
   flex: 1;
   min-height: 100vh;
+  padding: 0 100px;
   align-items: center;
   justify-content: center;
 }
 
 .key {
   border: .4rem solid black;
-  border-radius: .5rem;
+  border-radius: 1.5rem;
   margin: 1rem;
   font-size: 1.5rem;
   padding: 1rem .5rem;
-  transition: all .07s ease;
+  transition: all .09s ease;
   width: 10rem;
   text-align: center;
   color: white;
@@ -33,7 +34,7 @@ body,html {
 }
 
 .playing {
-  transform: scale(1.1);
+  transform: scale(1.5);
   border-color: #ffc600;
   box-shadow: 0 0 1rem #ffc600;
 }
